# social_network

./: .dockerignore  .gitignore  .pre-commit-config.yaml  env.example  pyproject.toml
s_n/s_n/: asgi.py  settings.py  wsgi.py
social_network_be/posts/: admin.py  forms.py  managers.py  urls.py  views.py
social_network_be/posts/migrations/: 0001_initial.py  0002_dislikes_postmodel_dis_likes_likes_and_more.py  0003_alter_dislikes_amount_of_alter_likes_amount_of.py  0004_alter_postmodel_dis_likes_alter_postmodel_likes.py  0005_alter_postmodel_dis_likes_alter_postmodel_likes.py  0006_remove_postmodel_dis_likes_remove_likes_user_and_more.py  0007_remove_postmodel_comments_comments_post.py
social_network_be/posts/models/: __init__.py  components.py  post.py
social_network_be/posts/static/posts/css/: post_create.css  post_detail.css  post_update.css  (+1 more)
social_network_be/posts/templates/posts/: post_create.html  post_detail.html  post_text_create.html  post_update.html  post_view.html
social_network_be/social_network_be/: asgi.py  settings.py  urls.py  wsgi.py
social_network_be/static/user/css/: profile.css
social_network_be/templates/base/: base.html
social_network_be/templates/base_auth/: base.html
social_network_be/user/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
social_network_be/user/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers.py  0004_user_avatar.py
social_network_be/user/templates/user/: profile.html  profile_edit.html  sign-in.html
social_network_fe/: package-lock.json  package.json
(+5 files in other folders)
