[project]
name = "social-network"
version = "0.1.0"
description = ""
authors = [
    {name = "Svyat",email = "svyat.kostevich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
